RESOLVED FIXED194313
fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html does not work on iPad
https://bugs.webkit.org/show_bug.cgi?id=194313
Summary fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html does not ...
Jonathan Bedard
Reported 2019-02-05 15:47:34 PST
This prevents us from running fast/forms/ios/force-gregorian-calendar-for-credit-card-expiry.html. On iPad, calendarTypeString will not be defined.
Attachments
Patch (17.55 KB, patch)
2019-02-11 09:09 PST, Wenson Hsieh
no flags
Patch (18.35 KB, patch)
2019-02-11 09:50 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-02-11 09:09:53 PST
Jonathan Bedard
Comment 2 2019-02-11 09:46:40 PST
Don't we need to un-skip this test on iPad in this patch too?
Wenson Hsieh
Comment 3 2019-02-11 09:49:29 PST
(In reply to Jonathan Bedard from comment #2) > Don't we need to un-skip this test on iPad in this patch too? Good catch :)
Wenson Hsieh
Comment 4 2019-02-11 09:50:04 PST
Wenson Hsieh
Comment 5 2019-02-11 11:01:56 PST
Comment on attachment 361688 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 6 2019-02-11 11:30:11 PST
Comment on attachment 361688 [details] Patch Clearing flags on attachment: 361688 Committed r241275: <https://trac.webkit.org/changeset/241275>
WebKit Commit Bot
Comment 7 2019-02-11 11:30:12 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-02-11 11:32:01 PST
Note You need to log in before you can comment on or make changes to this bug.